<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuMap"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:numericShortcut="1"
        android:title="@string/menu_map">
    </item>
    <item
        android:id="@+id/menuCheck"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/menu_check">
    </item>
    <item
        android:id="@+id/menuProf"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/menu_prof">
    </item>
    <item
        android:id="@+id/menuExplore"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_explore">
    </item>

</menu>